--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,31 @@
 # Node.js dependencies
 node_modules/
 package-lock.json
+package.json
 
 # TypeScript compiled output
 dist/
 *.js.map
 *.d.ts
 
-# Logs and system files
+# Chrome extension metadata
+_metadata/
+
+# Logs and debug files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 *.log
-
-# Operating system files
-.DS_Store
-Thumbs.db
 
 # Editor and IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+
+# Operating system files
+.DS_Store
+Thumbs.db
 
 # Environment files
 .env
@@ -33,7 +37,3 @@ Thumbs.db
 *.bak
 *.old
 *.orig
-
-# Chrome extension build artifacts
-*.crx
-*.pem
